--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2xP7+m6i6iLx
-								BjA4OJXpVA==
+								Q9VK98dSBsWf
+								39OEH1Dx8w==
 								</data>
 								<key>Size</key>
-								<integer>79978</integer>
+								<integer>78955</integer>
 							</dict>
 							<key>index_files/medium_526226.png</key>
 							<dict>
