--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nM/GnTe5QuQ4
-								QMIrLn8+vw==
+								aC8FnJ0ylCgf
+								MFfO8+WSBQ==
 								</data>
 								<key>Size</key>
-								<integer>40282</integer>
+								<integer>39211</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
