--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -412,11 +412,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7HJZGxm6u3ew
-								DcbBi+OTbw==
+								C5FvII9y3Z88
+								vbwP9rPabg==
 								</data>
 								<key>Size</key>
-								<integer>161908</integer>
+								<integer>160837</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
