--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uH/qh7r9bWS8
-								UPWtBz3RQQ==
+								H4OVHxwe0FKJ
+								y5qpJGwytQ==
 								</data>
 								<key>Size</key>
-								<integer>39890</integer>
+								<integer>38819</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
