--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/07-003Cheader003EPeople003C002Fheader003E/ChildPages/2-Core-Team/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/07-003Cheader003EPeople003C002Fheader003E/ChildPages/2-Core-Team/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bYLlR/bPWHFz
-								QVKdKdQItw==
+								b22KmNUVM/OM
+								Kokc+VzzLQ==
 								</data>
 								<key>Size</key>
-								<integer>35714</integer>
+								<integer>34643</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
