--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QyoH+xx/6uPB
-								LY/DjuPi5g==
+								U4+vN+McQqqQ
+								EVI1f9MBww==
 								</data>
 								<key>Size</key>
-								<integer>71646</integer>
+								<integer>70575</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
