--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lkM0quXFrA8x
-								J5vOBdugmA==
+								hFlihfS5iRig
+								ZTQ7haLmJQ==
 								</data>
 								<key>Size</key>
-								<integer>44116</integer>
+								<integer>43045</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
