--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s6BQxMxwo8r2
-								MJWL5y0I1Q==
+								RzHKFPa9N/+R
+								vq6kGvRmVw==
 								</data>
 								<key>Size</key>
-								<integer>50576</integer>
+								<integer>49505</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
