--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-All-courses/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-All-courses/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hfoe+Ya655u2
-								ZyGlM/UWaw==
+								W9dWJL9LKjQF
+								P+V/noOvjA==
 								</data>
 								<key>Size</key>
-								<integer>40096</integer>
+								<integer>39025</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
