--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:56Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WIZxXn+9Cu09
-								4Tepzq0bkw==
+								JYC0kTc73Sws
+								oo+m1b5SLw==
 								</data>
 								<key>Size</key>
-								<integer>49547</integer>
+								<integer>48492</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
