--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ao9KOwNNmZep
-								+V/pq+XwBQ==
+								glb4OKUk7/Eq
+								fxARzBdEug==
 								</data>
 								<key>Size</key>
-								<integer>47421</integer>
+								<integer>46380</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
