--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dGWT/+VwxFxP
-								dnsJ3Zti/w==
+								PYQWLPie2t40
+								zRpi08QRyQ==
 								</data>
 								<key>Size</key>
-								<integer>38248</integer>
+								<integer>37201</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
