--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/07-Complex-Systems-Seminars/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/07-Complex-Systems-Seminars/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HtVXJ624VRd2
-								xVVRaGIMoA==
+								gCAvoNnXVsIQ
+								cud05C+ptg==
 								</data>
 								<key>Size</key>
-								<integer>40320</integer>
+								<integer>39249</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
