--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IDesiHxTuAmC
-								/Tynio6BCw==
+								YpjLpWY4JHOT
+								h1P5Y3BDAw==
 								</data>
 								<key>Size</key>
-								<integer>40326</integer>
+								<integer>39255</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
