--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KGTmX3jUyKh0
-								JJBE9WquQQ==
+								WHC7TPpOCsDA
+								uQ2YH4pflw==
 								</data>
 								<key>Size</key>
-								<integer>45106</integer>
+								<integer>44067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
