--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/07-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/07-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MI8GSpac0Fwx
-								77INk0zMiA==
+								HqhjzB7kCvfl
+								cAakY7duvQ==
 								</data>
 								<key>Size</key>
-								<integer>101651</integer>
+								<integer>100580</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
