--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Listserv/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Listserv/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JUEuiR6etUYY
-								XWviA8gWsA==
+								6mGFFTmmsCGT
+								KMP9Qsh+6Q==
 								</data>
 								<key>Size</key>
-								<integer>44529</integer>
+								<integer>43458</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
