--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Credits/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/08-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Credits/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GOwF4YjnET5F
-								sYf4/EA2Lw==
+								cPsBT82HJms0
+								CA0x3tR7Gw==
 								</data>
 								<key>Size</key>
-								<integer>45148</integer>
+								<integer>44077</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
