--- a/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/09-404/Contents.plist
+++ b/juniper/vermontcomplexsystems-foundation-juniper.rw/Pages/09-404/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-07T12:34:55Z</date>
+						<date>2018-03-13T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xT+AyPvUVa6J
-								2SxQ/dWumA==
+								UrTYROgb/xdG
+								HAV09v+Uhg==
 								</data>
 								<key>Size</key>
-								<integer>37887</integer>
+								<integer>36840</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
