--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								a8WCpnkw7px1
-								Vuadn0h9IA==
+								iWtz7emaj1d6
+								LeEbZjJ+oQ==
 								</data>
 								<key>Size</key>
-								<integer>134342</integer>
+								<integer>127582</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c4Vk8X/jw0Wu
-								7QtQ6d/gTQ==
+								ezJi4F926f3t
+								/PVCNxY5iA==
 								</data>
 								<key>Size</key>
-								<integer>45994</integer>
+								<integer>42460</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
