--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wZDZikx/6w6Y
-								6kWRKYKaBA==
+								WPRT7gBmMKX+
+								FqRXswWhcQ==
 								</data>
 								<key>Size</key>
-								<integer>133189</integer>
+								<integer>128027</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ixy4vYGVoBf2
-								HUbaopt6iw==
+								bwm+C13MykKs
+								P7i3eVyF9g==
 								</data>
 								<key>Size</key>
-								<integer>49300</integer>
+								<integer>47457</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
