--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -182,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bJr0o+idubBq
-								kfGHzStfjA==
+								8tecTo0BDpuX
+								5KePwF0Fzg==
 								</data>
 								<key>Size</key>
-								<integer>135591</integer>
+								<integer>130492</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vqHtrQnQsbXA
-								CucdJ6pPFQ==
+								s7ZagKEjd4cC
+								1x61HFYXzA==
 								</data>
 								<key>Size</key>
-								<integer>63180</integer>
+								<integer>61271</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
