--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ayvBXsuKQRkx
-								piM/Ndbefg==
+								XTEdjzeLvFoq
+								XNmY9C10GQ==
 								</data>
 								<key>Size</key>
-								<integer>44887</integer>
+								<integer>44798</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+FibbI5I7vU/
-								cFN25AcJfA==
+								tH1yQEeLZhl5
+								sI7XaRwLnQ==
 								</data>
 								<key>Size</key>
-								<integer>130364</integer>
+								<integer>129233</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
