--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/6-Alumni/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/6-Alumni/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								E8aip40veWJt
-								6JHH6RMtYA==
+								KZOCmJxXLx0j
+								aqN1KjTzZg==
 								</data>
 								<key>Size</key>
-								<integer>35432</integer>
+								<integer>36018</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
