--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								R0IgKiKM0RrT
-								yxeXlJjHEQ==
+								Y6vEbCydExbR
+								oxvH9c91CQ==
 								</data>
 								<key>Size</key>
-								<integer>71415</integer>
+								<integer>72001</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
