--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AggU/2v3OUHH
-								MAePzxwHNQ==
+								iCfen9YSyUhs
+								L0Yu6QBnRg==
 								</data>
 								<key>Size</key>
-								<integer>136473</integer>
+								<integer>132485</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sSCbesHelcPN
-								3I/dj6bhCQ==
+								WDyJCRDJbIRz
+								Rp/HfaVi2w==
 								</data>
 								<key>Size</key>
-								<integer>59498</integer>
+								<integer>58182</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
