--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gqvPOc+ntZiu
-								pqBxLG1Oew==
+								L6u1KCmw1H2F
+								3pf7HmNjXQ==
 								</data>
 								<key>Size</key>
-								<integer>37988</integer>
+								<integer>38550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
