--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D76vG0YgCh9f
-								+ZOiH984Tg==
+								wJ0hqUiw9Jj6
+								Ab07rMzyGA==
 								</data>
 								<key>Size</key>
-								<integer>40009</integer>
+								<integer>40622</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
