--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/PageAttributes/Contents.plist
@@ -52,7 +52,7 @@ margin-bottom:1rem;
 				<key>HasCustomThemeStyle</key>
 				<false/>
 				<key>Hidden</key>
-				<false/>
+				<true/>
 				<key>ImageFormat</key>
 				<string>Original</string>
 				<key>ImageQuality</key>
