--- a/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6F5wNuA0CDQR
-								jtPpqarUkA==
+								h7t4KV9beSZj
+								j62pwcC+6w==
 								</data>
 								<key>Size</key>
-								<integer>41561</integer>
+								<integer>42135</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
