--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WB66kovQoLcP
-								OE4KPE3C5g==
+								jtdYNAhopXJ0
+								sVyh/I7UVA==
 								</data>
 								<key>Size</key>
-								<integer>40044</integer>
+								<integer>40630</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
