--- a/vermontcomplexsystems-foundation.rw/Pages/11-404/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/11-404/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-15T22:55:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								e9jvVe/mOYFq
-								03sB3Cng/Q==
+								jKTLAA+yZIPC
+								bGHQLgFv5g==
 								</data>
 								<key>Size</key>
-								<integer>37606</integer>
+								<integer>38180</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
